// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute a race 1`] = `
Array [
  Array [
    "{\\"type\\":\\"file:start\\"}",
  ],
  Array [
    "{\\"type\\":\\"race:start\\",\\"race\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:finish\\",\\"race\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"file:finish\\"}",
  ],
]
`;

exports[`execute a run 1`] = `
Array [
  Array [
    "{\\"type\\":\\"file:start\\"}",
  ],
  Array [
    "{\\"type\\":\\"run:start\\",\\"run\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:end\\",\\"run\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"file:end\\"}",
  ],
]
`;

exports[`execute an async race 1`] = `
Array [
  Array [
    "{\\"type\\":\\"file:start\\"}",
  ],
  Array [
    "{\\"type\\":\\"race:start\\",\\"race\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:finish\\",\\"race\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"file:finish\\"}",
  ],
]
`;

exports[`execute an async run 1`] = `
Array [
  Array [
    "{\\"type\\":\\"file:start\\"}",
  ],
  Array [
    "{\\"type\\":\\"run:start\\",\\"run\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:end\\",\\"run\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"file:end\\"}",
  ],
]
`;

exports[`execute multiple races in band 1`] = `
Array [
  Array [
    "{\\"type\\":\\"file:start\\"}",
  ],
  Array [
    "{\\"type\\":\\"race:start\\",\\"race\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:finish\\",\\"race\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:start\\",\\"race\\":{\\"title\\":\\"bar\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:finish\\",\\"race\\":{\\"title\\":\\"bar\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:start\\",\\"race\\":{\\"title\\":\\"baz\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:finish\\",\\"race\\":{\\"title\\":\\"baz\\"}}",
  ],
  Array [
    "{\\"type\\":\\"file:finish\\"}",
  ],
]
`;

exports[`execute multiple runs in band 1`] = `
Array [
  Array [
    "{\\"type\\":\\"file:start\\"}",
  ],
  Array [
    "{\\"type\\":\\"run:start\\",\\"run\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:end\\",\\"run\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:start\\",\\"run\\":{\\"title\\":\\"bar\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:end\\",\\"run\\":{\\"title\\":\\"bar\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:start\\",\\"run\\":{\\"title\\":\\"baz\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:end\\",\\"run\\":{\\"title\\":\\"baz\\"}}",
  ],
  Array [
    "{\\"type\\":\\"file:end\\"}",
  ],
]
`;

exports[`handle exception in a race 1`] = `
Array [
  Array [
    "{\\"type\\":\\"file:start\\"}",
  ],
  Array [
    "{\\"type\\":\\"race:start\\",\\"race\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:error\\",\\"race\\":{\\"title\\":\\"foo\\"},\\"err\\":{}}",
  ],
  Array [
    "{\\"type\\":\\"race:finish\\",\\"race\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:start\\",\\"race\\":{\\"title\\":\\"bar\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:error\\",\\"race\\":{\\"title\\":\\"bar\\"},\\"err\\":{}}",
  ],
  Array [
    "{\\"type\\":\\"race:finish\\",\\"race\\":{\\"title\\":\\"bar\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:start\\",\\"race\\":{\\"title\\":\\"baz\\"}}",
  ],
  Array [
    "{\\"type\\":\\"race:finish\\",\\"race\\":{\\"title\\":\\"baz\\"}}",
  ],
  Array [
    "{\\"type\\":\\"file:finish\\"}",
  ],
]
`;

exports[`handle exception in a run 1`] = `
Array [
  Array [
    "{\\"type\\":\\"file:start\\"}",
  ],
  Array [
    "{\\"type\\":\\"run:start\\",\\"run\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:error\\",\\"run\\":{\\"title\\":\\"foo\\"},\\"err\\":{}}",
  ],
  Array [
    "{\\"type\\":\\"run:end\\",\\"run\\":{\\"title\\":\\"foo\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:start\\",\\"run\\":{\\"title\\":\\"bar\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:error\\",\\"run\\":{\\"title\\":\\"bar\\"},\\"err\\":{}}",
  ],
  Array [
    "{\\"type\\":\\"run:end\\",\\"run\\":{\\"title\\":\\"bar\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:start\\",\\"run\\":{\\"title\\":\\"baz\\"}}",
  ],
  Array [
    "{\\"type\\":\\"run:end\\",\\"run\\":{\\"title\\":\\"baz\\"}}",
  ],
  Array [
    "{\\"type\\":\\"file:end\\"}",
  ],
]
`;
